修改公共依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ plugins {
 
 android {
     namespace 'com.fido.common.common_utils'
-    compileSdk 32
+    compileSdk versions.compileSdk
 
     defaultConfig {
         applicationId "com.fido.common.common_utils"
-        minSdk 24
-        targetSdk 32
+        minSdk versions.minSdk
+        targetSdk versions.targetSdk
+
         versionCode 1
         versionName "1.0"
 
