--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,5 @@ plugins {
     id 'com.android.library' version '7.4.0-alpha10' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
+
+apply from: "dependent.gradle"
