--- a/common_base_ui/build.gradle
+++ b/common_base_ui/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.fido.common.common_base_util'
+    namespace 'com.fido.common.common_base_ui'
     compileSdk versions.compileSdk
 
     defaultConfig {
@@ -36,10 +36,12 @@ dependencies {
 //    implementation 'androidx.core:core-ktx:1.7.0'
 //    implementation 'androidx.appcompat:appcompat:1.4.1'
 //    implementation 'com.google.android.material:material:1.5.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     //仅运行时依赖
     compileOnly des.android.kt_ktx
     compileOnly des.android.appcompat
     compileOnly des.android.material
     compileOnly des.android.constraint_layout
+
 }
