修改公共依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,11 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation deps.android.kt_ktx
+    implementation deps.android.appcompat
+    implementation deps.android.material
+    implementation deps.android.constraint_layout
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
