--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
+GROUP=io.github.fido
 VERSION_NAME=0.1.0
