--- a/dependent.gradle
+++ b/dependent.gradle
@@ -47,7 +47,8 @@ ext {
 
                     'permission'        : 'com.github.getActivity:XXPermissions:13.2',
                     'live_bus'          : 'com.jeremyliao:live-event-bus-x:1.7.2',
-                    'brvah'             : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6',
+//                    'brvah'             : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6',
+                    'brvah'             : 'io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.0-beta04', // 4.0 版本
                     'smart_refresh_core': 'com.scwang.smart:refresh-layout-kernel:2.0.1',
                     'smart_refresh_head': 'com.scwang.smart:refresh-header-classics:2.0.1',
                     'picture_selector'  : 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.0',  //图片选择
