--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://jitpack.io' }
+        google()
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.android.application' version '7.4.0-alpha10' apply false
+    id 'com.android.library' version '7.4.0-alpha10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 apply from: "dependent.gradle"
+
+
+
