--- a/common_base_util/src/main/AndroidManifest.xml
+++ b/common_base_util/src/main/AndroidManifest.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.fido.common.common_base_util">
 
-   <!-- <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Common_utils" />-->
+
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+   <uses-permission android:name="android.permission.INTERNET" />
+
+   <application>
+      <provider
+          android:name="androidx.startup.InitializationProvider"
+          android:authorities="${applicationId}.androidx-startup"
+          android:exported="false"
+          tools:node="merge" >
+         <meta-data
+             android:name="com.fido.common.common_base_util.interfaces.BaseInitiallizer"
+             android:value="androidx.startup" />
+      </provider>
+   </application>
 
 </manifest>
