--- a/dependent.gradle
+++ b/dependent.gradle
@@ -8,7 +8,7 @@ ext {
     ]
 
     deps = [
-            //android和kt依赖资源
+            //android 和 kt依赖资源
             android: [
                     'appcompat'             : 'androidx.appcompat:appcompat:1.4.1',
                     'constraint_layout'     : 'androidx.constraintlayout:constraintlayout:2.1.3',
@@ -23,6 +23,8 @@ ext {
                     'ktx_coroutines_core'   : 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2',
                     'ktx_coroutines_android': 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2',
 
+                    'kt_reflect'            : "org.jetbrains.kotlin:kotlin-reflect:1.7.10",
+
                     'lifecycle'             : 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1',
                     'lifecycle_ktx'         : 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1',
                     'lifecycle_process'     : 'androidx.lifecycle:lifecycle-process:2.4.1',
@@ -31,29 +33,32 @@ ext {
                     'test_junit'            : 'androidx.test.ext:junit:1.1.1',
                     'test_espresso'         : 'androidx.test.espresso:espresso-core:3.2.0',
 
+                    'app_startup'           : 'androidx.startup:startup-runtime:1.0.0',
+
             ],
 
             //第三方
             support: [
-                    'glide'             : 'com.github.bumptech.glide:glide:4.11.0',
-                    'glide_annotation'  : 'com.github.bumptech.glide:annotations:4.11.0',
-                    'glide_integration' : 'com.github.bumptech.glide:okhttp3-integration:4.11.0',
-                    'glide_compiler'    : 'com.github.bumptech.glide:compiler:4.11.0',
+                    'glide'             : 'com.github.bumptech.glide:glide:4.12.0',
+                    'glide_annotation'  : 'com.github.bumptech.glide:annotations:4.12.0',
+                    'glide_integration' : 'com.github.bumptech.glide:okhttp3-integration:4.12.0',
+                    'glide_compiler'    : 'com.github.bumptech.glide:compiler:4.12.0',
+
+                    'gson'              : 'com.google.code.gson:gson:2.8.5',
 
                     'retrofit2'         : 'com.squareup.retrofit2:retrofit:2.9.0',
                     'retrofit_gson'     : 'com.squareup.retrofit2:converter-gson:2.9.0',
 //                    'cookie_jar'        : 'com.github.franmontiel:PersistentCookieJar:v1.0.1',
                     'okio'              : 'com.squareup.okio:okio:3.0.0',
 
-                    'permission'        : 'com.github.getActivity:XXPermissions:13.2',
+                    'permission'        : 'com.guolindev.permissionx:permissionx:1.7.1',
                     'live_bus'          : 'com.jeremyliao:live-event-bus-x:1.7.2',
-//                    'brvah'             : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6',
                     'brvah'             : 'io.github.cymchad:BaseRecyclerViewAdapterHelper:4.0.0-beta04', // 4.0 版本
                     'smart_refresh_core': 'com.scwang.smart:refresh-layout-kernel:2.0.1',
                     'smart_refresh_head': 'com.scwang.smart:refresh-header-classics:2.0.1',
                     'picture_selector'  : 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.0',  //图片选择
-                    'easy_adapter'      : 'com.lxj:easyadapter:1.2.3',  //xpopup的内置依赖库
-                    'xpopup'            : 'com.lxj:xpopup:2.2.10',
+//                    'picture_selector'  : 'io.github.lucksiege:pictureselector:v3.10.7',               //图片选择
+                    'xpopup'            : 'com.github.li-xiaojun:XPopup:2.9.19',
 
                     'picker_view'       : 'com.contrarywind:Android-PickerView:4.1.9',              //PicierView (可选)
                     'banner'            : 'com.youth.banner:banner:2.1.0',                           //轮播 (可选)
