common_base_util:新增倒计时工具类 common_base_ui: 新增部分扩展方法

--- a/common_base_util/build.gradle
+++ b/common_base_util/build.gradle
@@ -74,10 +74,13 @@ dependencies {
     // jetpack app startup
     implementation deps.android.app_startup
     //gson
-    implementation deps.support.gson
+    api deps.support.gson
     // kotlin-reflect
     api deps.android.kt_reflect
 
+    //ktx_coroutines
+    api deps.android.ktx_coroutines_core
+    api deps.android.ktx_coroutines_android
 
 }
 
