common_base_util:新增Drawable工具类 common_base_ui: 更新ImageSelectExt部分方法，升级ImageSelect库版本3.10.7

--- a/common_base_ui/build.gradle
+++ b/common_base_ui/build.gradle
@@ -106,6 +106,8 @@ dependencies {
 
     //图片选择
     api deps.support.picture_selector
+    api deps.support.picture_compress
+    api deps.support.picture_ucrop
 
     //郭神 permissionX
     api deps.support.permission
