--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
 
         <activity android:name=".time.IntervalTimeAc"/>
 
+        <activity android:name=".spannable.SpannableAc"/>
+
     </application>
 
 </manifest>
