--- a/common_base_util/build.gradle
+++ b/common_base_util/build.gradle
@@ -78,6 +78,11 @@ dependencies {
     // kotlin-reflect
     api deps.android.kt_reflect
 
+    // spannable util
+    api (deps.support.spannable){
+        exclude group: 'androidx.core'
+    }
+
     //ktx_coroutines
     api deps.android.ktx_coroutines_core
     api deps.android.ktx_coroutines_android
