common_base_util: common_base_ui  : 新增CodeEditText类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".time.IntervalTimeAc"/>
 
         <activity android:name=".spannable.SpannableAc"/>
+        <activity android:name=".edittext.CustomStyleActivity"/>
 
     </application>
 
