common_base_util: 新增部分方法 common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,9 @@
 
         <activity android:name=".spannable.SpannableAc"/>
         <activity android:name=".edittext.CustomStyleActivity"/>
-
+        <activity android:name=".picker.PickerViewAc"/>
+        <activity android:name=".picker.LinkagePickerActivity"/>
     </application>
+
 
 </manifest>
