--- a/common_base_util/src/main/AndroidManifest.xml
+++ b/common_base_util/src/main/AndroidManifest.xml
@@ -17,6 +17,17 @@
              android:name="com.fido.common.common_base_util.interfaces.BaseInitiallizer"
              android:value="androidx.startup" />
       </provider>
+
+      <provider
+          android:name="androidx.core.content.FileProvider"
+          android:authorities="com.fido.common.common_base_util.fileprovider"
+          android:exported="false"
+          android:grantUriPermissions="true">
+         <meta-data
+             android:name="android.support.FILE_PROVIDER_PATHS"
+             android:resource="@xml/apk_file_paths" />
+      </provider>
+      
    </application>
 
 </manifest>
