--- a/dependent.gradle
+++ b/dependent.gradle
@@ -66,7 +66,8 @@ ext {
                     'picture_camerax'   : 'io.github.lucksiege:camerax:v3.10.7',
                     'xpopup'            : 'com.github.li-xiaojun:XPopup:2.9.19',
                     'picker_view'       : 'com.contrarywind:Android-PickerView:4.1.9',              //PicierView (可选)
-                    'banner'            : 'com.youth.banner:banner:2.1.0',                           //轮播 (可选)
+                    'wheel_picker'      : 'com.github.zyyoona7.WheelPicker:pickerview:2.0.7',       //选择器 https://github.com/zyyoona7/WheelPicker
+                    'banner'            : 'com.youth.banner:banner:2.1.0',                          //轮播 (可选)
                     'spannable'         : 'com.github.liangjingkanji:spannable:1.2.6',
             ]
 
