--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         </activity>
 
         <activity android:name=".rv.RvAc"/>
+        <activity android:name=".rv.RvDragSwipeAc"/>
 
         <activity android:name=".time.IntervalTimeAc"/>
 
