common_base_util: common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
         <activity android:name=".edittext.CustomStyleActivity"/>
         <activity android:name=".picker.PickerViewAc"/>
         <activity android:name=".picker.LinkagePickerActivity"/>
+
+        <activity android:name=".constraintlayout.ConstraintLayoutAc"/>
+
     </application>
 
 
