--- a/gradle.properties
+++ b/gradle.properties
@@ -11,28 +11,33 @@ org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryErr
 
 android.nonTransitiveRClass=true
 
+SONATYPEHOST=https://s01.oss.sonatype.org
+
+# ============================= Use Plugin ==============================
 USE_MAVEN_PLUGIN=false
+# ============================= Use Plugin ==============================
 
-GROUP_ID=io.github.fido
-VERSION_NAME=0.1.1
+GROUP_ID=io.github.sevenupup
 
-# ?????
-POM_DESCRIPTION=0
-POM_INCEPTION_YEAR=0
-POM_URL=test
+VERSION_NAME=0.1.4
 
-POM_LICENSE_NAME=test
-POM_LICENSE_URL=test
-POM_LICENSE_DIST=test
+POM_DESCRIPTION=A basical library for android.
+POM_INCEPTION_YEAR=2023
+POM_URL=https://github.com/SevenUpup/common_utils//
 
-POM_DEVELOPER_ID=test
-POM_DEVELOPER_NAME=test
-POM_DEVELOPER_URL=test
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=http://www.apache.org/licenses/LICENSE-2.0.txt
 
-POM_SCM_URL=test
-POM_SCM_CONNECTION=test
-POM_SCM_DEV_CONNECTION=test
+POM_SCM_URL=https://github.com/SevenUpup/common_utils/
+POM_SCM_CONNECTION=scm:git:git://github.com/SevenUpup/common_utils.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/SevenUpup/common_utils.git
+
+POM_DEVELOPER_ID=sevenupup
+POM_DEVELOPER_NAME=Tao Hu
+POM_DEVELOPER_URL=https://github.com/SevenUpup/
 
 
 #  F:\jdk11
 org.gradle.java.home=F\:\\jdk11
+
