--- a/gradle.properties
+++ b/gradle.properties
@@ -39,5 +39,5 @@ POM_DEVELOPER_URL=https://github.com/SevenUpup/
 
 
 #  F:\jdk11
-org.gradle.java.home=F\:\\jdk11
+#org.gradle.java.home=F\:\\jdk11
 
