--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 android.enableJetifier=true
 
-org.gradle.daemon=true
-org.gradle.configureondemand=true
-org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#org.gradle.daemon=true
+#org.gradle.configureondemand=true
+#org.gradle.parallel=true
+#org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 android.nonTransitiveRClass=true
 
