--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     implementation 'com.github.liangjingkanji:debugkit:1.3.0'
 
     //crashwoodpecker
-    debugImplementation 'me.drakeet.library:crashwoodpecker:2.1.1'
+    implementation 'me.drakeet.library:crashwoodpecker:2.1.1'
 
     //kotlin反射
 //    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
