--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 
 # Automatically convert third-party libraries to use AndroidX
 android.useAndroidX=true
+android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-#android.enableJetifier=true
 #org.gradle.daemon=true
 #org.gradle.configureondemand=true
 #org.gradle.parallel=true
