common_base_util: minsdk 调整为23 common_base_ui  : ...

--- a/common_base_util/src/main/AndroidManifest.xml
+++ b/common_base_util/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
       <provider
           android:name="androidx.core.content.FileProvider"
-          android:authorities="com.fido.common.common_base_util.fileprovider"
+          android:authorities="${applicationId}.fido.common.common_base_util.fileprovider"
           android:exported="false"
           android:grantUriPermissions="true">
          <meta-data
