--- a/dependent.gradle
+++ b/dependent.gradle
@@ -15,7 +15,7 @@ ext {
                     'recyclerview'          : 'androidx.recyclerview:recyclerview:1.2.0',
                     'material'              : 'com.google.android.material:material:1.5.0',
                     'multidex'              : 'androidx.multidex:multidex:2.0.1',
-                    'fragment_ktx'          : 'androidx.fragment:fragment-ktx:1.3.6',
+                    'fragment_ktx'          : 'androidx.fragment:fragment-ktx:1.3.6',  // 包含  androidx.lifecycle:lifecycle-viewmodel-ktx
                     'navigation'            : 'androidx.navigation:navigation-fragment-ktx:2.3.5',
                     'navigation_ui'         : 'androidx.navigation:navigation-ui-ktx:2.3.5',
 
@@ -27,6 +27,7 @@ ext {
 
                     'lifecycle'             : 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1',
                     'lifecycle_ktx'         : 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1',
+                    'viewmodel_ktx'         : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1',
                     'lifecycle_process'     : 'androidx.lifecycle:lifecycle-process:2.4.1',
 
                     'junit'                 : 'junit:junit:4.12',
