--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -67,6 +69,11 @@
         <activity android:name=".test.NavigationAc"/>
 
         <activity android:name=".naviga.CodenavigationAc"/>
+
+        <activity android:name=".viewpager.ViewpageAc"/>
+
+        <activity android:name=".LiveDataAc"/>
+
     </application>
 
 
