--- a/dependent.gradle
+++ b/dependent.gradle
@@ -36,6 +36,8 @@ ext {
 
                     'app_startup'           : 'androidx.startup:startup-runtime:1.0.0',
 
+                    'room_ktx'              : 'androidx.room:room-ktx:2.4.2',
+                    'room_compiler'         : 'androidx.room:room-compiler:2.4.2',
             ],
 
             //第三方
